--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "comma-dangle": "off",
     "implicit-arrow-linebreak": "off",
     "function-paren-newline": "off",
-    "max-classes-per-file": "off"
+    "max-classes-per-file": "off",
+    "no-console": "warn"
   }
 }
