--- a/debian/lighttpd/89-webmeteo.conf
+++ b/debian/lighttpd/89-webmeteo.conf
@@ -1,7 +1,7 @@
 alias.url += (
   "/meteo/" => "/usr/share/webmeteo/",
   "/weather/" => "/usr/share/webmeteo/",
-  "/" => "/usr/share/readsb/webmeteo/",
+  "/" => "/usr/share/webmeteo/",
   "download" => "var/meteodata/"
 )
 
