Add dir listing for log file directory.

--- a/debian/lighttpd/89-webmeteo.conf
+++ b/debian/lighttpd/89-webmeteo.conf
@@ -1,8 +1,8 @@
 alias.url += (
   "/meteo/" => "/usr/share/webmeteo/",
   "/weather/" => "/usr/share/webmeteo/",
-  "/" => "/usr/share/webmeteo/",
-  "download" => "var/meteodata/"
+  "/download/" => "/var/meteodata/",
+  "/" => "/usr/share/webmeteo/"
 )
 
 # redirect the slash-less URL
@@ -11,3 +11,9 @@ url.redirect += (
   "^/weather$" => "/weather/",
   "^/download$" => "/download/",
 )
+
+$HTTP["url"] =~ "^/download($|/)" {
+  dir-listing.activate = "enable",
+  dir-listing.hide-dotfiles = "enable",
+# dir-listing.external-css = "../css/styles.css"
+}
