--- a/debian/rules
+++ b/debian/rules
@@ -17,5 +17,8 @@ include /usr/share/dpkg/default.mk
 override_dh_auto_build:
 	dh_auto_build
 
+override_dh_shlibdeps:
+	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
+
 %:
 	dh $@ --with=systemd
