--- a/debian/meteo.service
+++ b/debian/meteo.service
@@ -8,10 +8,10 @@ After=network.target
 After=sockets.target
 
 [Service]
-EnvironmentFile=/etc/default/meteoserver
+EnvironmentFile=/etc/default/meteo
 User=meteo
-RuntimeDirectory=meteoserver
-RuntimeDirectoryMode=0755
+StandardOutput=null
+StandardError=journal
 ExecStart=/usr/bin/meteoserver $SERVER_OPTIONS
 Type=simple
 Restart=on-failure
